# deskthing

./: .gitignore  Cargo.toml  README.md
src/: buffer.rs  component.rs  frame.rs  grid.rs  main.rs  traits.rs
src/shaders/: mod.rs
src/simulations/: boids.rs  colorlife.rs  conway.rs  fluid.rs  mod.rs
